--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,11 +7,12 @@
             <h1><a href="">SLowLifeTed Blog</a></h1>
         </div>
         
-        <div>
-            <p>published: 04.09.2016</p>
-            <h2><a href="">Slow first post</a></h2>
-            <p>Slow Travel, Slow Life!</p>
-            <p>It works!</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
